<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.blassoft.hitapp.ResultListActivity">

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:minHeight="45dp">

            <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0" android:layout_gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:id="@+id/msg_text_view_rv_0"
                    android:textColor="#073763"
                    android:textSize="18dp"
                    android:layout_centerVertical="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:id="@+id/msg_text_view_rv_1"
                    android:textStyle="bold"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:textSize="18dp"
                    android:textColor="#073763" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:id="@+id/msg_text_view_rv_2"
                    android:layout_toRightOf="@+id/msg_text_view_rv_1"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    android:textColor="#073763"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="5dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sort_distance"
                    android:id="@+id/sort_distance"
                    android:layout_alignParentTop="true"
                    android:layout_toLeftOf="@+id/sort_score"
                    android:layout_toStartOf="@+id/sort_score"
                    android:layout_marginRight="24dp"
                    android:layout_marginEnd="24dp"
                    android:textColor="#073763"
                    android:textStyle="bold"
                    android:clickable="true"
                    android:onClick="sort"
                    android:visibility="invisible"
                    android:layout_centerVertical="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sort_score"
                    android:id="@+id/sort_score"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:textColor="#073763"
                    android:textStyle="bold"
                    android:clickable="true"
                    android:onClick="sort"
                    android:visibility="invisible"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="20dp"/>
            </RelativeLayout>
        </TableRow>
    </TableLayout>

    <com.blassoft.hitapp.util.MyScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/result_scroll"
        android:scrollbars="none"
        android:layout_marginTop="55dp">
        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/table_result"
            android:clickable="true"
            android:focusable="true"
            android:focusableInTouchMode="true" >

        </TableLayout>
    </com.blassoft.hitapp.util.MyScrollView>

    <TextView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/load_next"
        android:layout_alignBottom="@+id/result_scroll"
        android:text="@string/dots"
        android:textSize="24sp"
        android:layout_centerHorizontal="true"
        android:clickable="true"
        android:onClick="nextPage"
        android:gravity="center|bottom" />

</RelativeLayout>
